[tool.poetry]
name = "meus_gastos_backend"
version = "0.1.0"
description = ""
authors = ["Marcos Ferreira <ferreira.mr@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
